@@ -8,6 +8,7 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 
 Bug fixes:
 
+- Pyopener registry is not compatible with multithreading (#).
 - A CSLConstList ctypedef has been added and is used where appropriate (#1404).
 - Fiona model objects have a informative, printable representation again (#).
 
